--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/typeorm": "^11.0.0",
     "dotenv": "^16.5.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.24",
     "vexor": "^0.2.1"
   },
   "devDependencies": {
