--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/mercadopago": "^1.5.11",
     "dotenv": "^16.5.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "mercadopago": "^2.7.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
